plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.1'
	id 'io.spring.dependency-management' version '1.1.7'
    id 'org.openapi.generator' version '7.17.0'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

def frontendPath = "$projectDir/../FE"

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(24)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.13'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.flywaydb:flyway-core:11.17.0'
    runtimeOnly 'org.flywaydb:flyway-database-postgresql:11.17.0'
    runtimeOnly 'org.postgresql:postgresql'
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.6'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.6'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'com.h2database:h2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    compileOnly 'org.projectlombok:lombok:1.18.42'
    implementation 'org.mapstruct:mapstruct:1.6.3'
    annotationProcessor 'org.projectlombok:lombok:1.18.42'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
}

tasks.named('test') {
	useJUnitPlatform()
}

openApiGenerate {
    generatorName = "typescript-fetch"
    inputSpec = "${projectDir}/openapi.yaml"
    outputDir = "$frontendPath/typescript-client"
    apiPackage = "api"
    modelPackage = "model"
}

tasks.register('openApiExport', Test) {
    group = 'openapi tools'
    dependsOn testClasses
    useJUnitPlatform()

    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath

    filter {
        includeTestsMatching 'com.example.OpenApiExportTest'
    }

    outputs.upToDateWhen { false }

    doFirst {
        println "======================================================"
        println "------- GENERATING OPENAPI SPEC (openapi.yaml) -------"
        println "======================================================"
    }

    doLast {
        def openapiFile = file("$projectDir/openapi.yaml")
        if (openapiFile.exists()) {
            println "openapi.yaml generated successfully at $openapiFile"
        } else {
            println "WARNING: openapi.yaml was NOT generated!"
        }
    }
}

tasks.named('openApiGenerate') {
    dependsOn tasks.named('openApiExport')
}